--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="/styles/reset.css">
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="app/components/questions/questions.css">
+  
   <title>Trivia Trends</title>
   <link rel="shortcut icon" href="/styles/assets/crownFavicon.png">
 </head>
