--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
   <article>
     <nav>
-      <a>All Questions</a>
-      <a>Easy</a>
+      <a ng-click="">All Questions</a>
+      <a ng-click="filter('difficulty', '1')">Easy</a>
       <a>Medium</a>
       <a>Hard</a>
       <a>Search by Animal</a>
